<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asus Transformer Prime Settings</string>

    <!--preferences -->
    <string name="keyboard_language_title">Dock Keyboard Layout</string>
    <string name="keyboard_language_summary">Change dock keyboard layout</string>
    <string name="dock_settings_title">Dock Settings</string>
    <string name="cpu_settings_title">CPU Settings</string>

    <string name="cpu_mode_title">CPU Mode Switch</string>
    <string name="cpu_settings_summary">Change CPU Power Mode</string>


    <!-- CPU Modes -->
    <string name="cpu_pwrsv">Power Save</string>
    <string name="cpu_bal">Balanced</string>
    <string name="cpu_pref">Performance</string>

    <!-- keyboard layouts -->
    <string name="kbl_fr_BE">BE-fr</string>
    <string name="kbl_nl_BE">BE-nl</string>
    <string name="kbl_pt_BR">BR</string>
    <string name="kbl_en_CA">CA-en</string>
    <string name="kbl_fr_CA">CA-fr</string>
    <string name="kbl_de_CH">CH-de</string>
    <string name="kbl_fr_CH">CH-fr</string>
    <string name="kbl_it_CH">CH-it</string>
    <string name="kbl_zh_CN">CN</string>
    <string name="kbl_cs_CZ">CZ</string>
    <string name="kbl_de_DE">DE</string>
    <string name="kbl_da_DK">DK</string>
    <string name="kbl_ar_EG">EG</string>
    <string name="kbl_es_ES">ES</string>
    <string name="kbl_fi_FI">FI</string>
    <string name="kbl_fr_FR">FR</string>
    <string name="kbl_en_GB">GB</string>
    <string name="kbl_el_GR">GR</string>
    <string name="kbl_en_GR">GR-en</string>
    <string name="kbl_hu_HU">HU</string>
    <string name="kbl_iw_IL">IL</string>
    <string name="kbl_it_IT">IT</string>
    <string name="kbl_fa_IR">IR</string>
    <string name="kbl_ko_KR">KR</string>
    <string name="kbl_nl_NL">NL</string>
    <string name="kbl_nb_NO">NO</string>
    <string name="kbl_pl_PL">PL</string>
    <string name="kbl_pt_PT">PT</string>
    <string name="kbl_ru_RU">RU</string>
    <string name="kbl_sv_SE">SE</string>
    <string name="kbl_sk_SK">SK</string>
    <string name="kbl_th_TH">TH</string>
    <string name="kbl_tr_TR">TR</string>
    <string name="kbl_zh_TW">TW</string>
    <string name="kbl_en_US">US</string>
    <string name="kbl_es_US">US-es</string>
</resources>
