<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
     android:title="@string/dock_settings_title">

    <ListPreference android:key="keyboard_layout"
        android:title="@string/keyboard_language_title"
        android:summary="@string/keyboard_language_summary"
        android:entries="@array/keyboard_layout_array"
        android:entryValues="@array/keyboard_layout_array_values" />

    </PreferenceCategory>

    <PreferenceCategory
     android:title="@string/cpu_settings_title">

    <ListPreference android:key="cpu_settings"
        android:title="@string/cpu_mode_title"
        android:summary="@string/cpu_settings_summary"
        android:entries="@array/cpu_settings_array"
        android:entryValues="@array/cpu_settings_array_values" />

    </PreferenceCategory>
</PreferenceScreen>
